ply/calc/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    RPAREN
    DIVIDE
    TIMES
    LPAREN

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression PLUS term
Rule 2     expression -> expression MINUS term
Rule 3     expression -> term
Rule 4     term -> factor
Rule 5     factor -> NUMBER

Terminals, with rules where they appear

DIVIDE               : 
LPAREN               : 
MINUS                : 2
NUMBER               : 5
PLUS                 : 1
RPAREN               : 
TIMES                : 
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 0
factor               : 4
term                 : 1 2 3

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . factor
    (5) factor -> . NUMBER

    NUMBER          shift and go to state 2

    term                           shift and go to state 1
    expression                     shift and go to state 4
    factor                         shift and go to state 3

state 1

    (3) expression -> term .

    PLUS            reduce using rule 3 (expression -> term .)
    MINUS           reduce using rule 3 (expression -> term .)
    $end            reduce using rule 3 (expression -> term .)


state 2

    (5) factor -> NUMBER .

    PLUS            reduce using rule 5 (factor -> NUMBER .)
    MINUS           reduce using rule 5 (factor -> NUMBER .)
    $end            reduce using rule 5 (factor -> NUMBER .)


state 3

    (4) term -> factor .

    PLUS            reduce using rule 4 (term -> factor .)
    MINUS           reduce using rule 4 (term -> factor .)
    $end            reduce using rule 4 (term -> factor .)


state 4

    (0) S' -> expression .
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    PLUS            shift and go to state 5
    MINUS           shift and go to state 6


state 5

    (1) expression -> expression PLUS . term
    (4) term -> . factor
    (5) factor -> . NUMBER

    NUMBER          shift and go to state 2

    term                           shift and go to state 7
    factor                         shift and go to state 3

state 6

    (2) expression -> expression MINUS . term
    (4) term -> . factor
    (5) factor -> . NUMBER

    NUMBER          shift and go to state 2

    term                           shift and go to state 8
    factor                         shift and go to state 3

state 7

    (1) expression -> expression PLUS term .

    PLUS            reduce using rule 1 (expression -> expression PLUS term .)
    MINUS           reduce using rule 1 (expression -> expression PLUS term .)
    $end            reduce using rule 1 (expression -> expression PLUS term .)


state 8

    (2) expression -> expression MINUS term .

    PLUS            reduce using rule 2 (expression -> expression MINUS term .)
    MINUS           reduce using rule 2 (expression -> expression MINUS term .)
    $end            reduce using rule 2 (expression -> expression MINUS term .)

